   with non-default interface/endpoint/config numbers. [PR #2611]

 - USB drivers should now accept a `LIBUSB_DEBUG=INTEGER` setting in `ups.conf`
   (as well as an environment variable that can be generally set via `nut.conf`
   or service unit methods or init script), to enable troubleshooting of LibUSB
   itself. [issue #2616]

 - Introduced a new driver concept for interaction with OS-reported hardware
   monitoring readings. Currently instantiated as `hwmon_ina219` specifically
   made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"
   subsystem of its "sysfs" interface (and talking I2C under the hood), this
   approach seems to have good potential to expand into covering more devices
   and perhaps platforms. [#2430]

 - Introduced `ECO` status concept for "ECO mode" (or "High Efficiency" mode,
   or "Energy Saver System"...) as named and defined by hardware vendors.
   One common aspect is that this is a balance of electrical efficiency vs.
   robust outage protection (which may be overkill for IT equipment whose
   PSU can survive several milliseconds on capacitors alone) which can be
   selected at run-time.  Previously such choice was made at the time of
   purchase, with the UPSes only supporting some one protection strategy.
   [issue #2495, PR #2637]
   * Updated documentation, end-user clients (CGI, NUT-Monitor UI);
   * Updated `upsmon` client with ability to report entering and exiting
     the ECO mode if reported by the driver;
   * Initial implementation for Eaton devices with `usbhid-ups` driver.

 - Introduced handling for the `ALARM` status, which already existed as a
   common denominator for devices seen with active `ups.alarm` variables.
   UPS devices in an `ALARM` status are generally considered volatile and
   may be considered critical/dead by the `upsmon` client earlier than in
   other statuses (e.g. in no-communication situations). It has to be noted