@@ -33,7 +33,7 @@
 #include "nut_stdint.h"
 
 #define USB_DRIVER_NAME		"USB communication driver (libusb 1.0)"
-#define USB_DRIVER_VERSION	"0.49"
+#define USB_DRIVER_VERSION	"0.50"
 
 /* driver description structure */
 upsdrv_info_t comm_upsdrv_info = {
@@ -205,6 +205,7 @@ static int nut_libusb_open(libusb_device_handle **udevp,
 	int i;
 	int count_open_EACCESS = 0;
 	int count_open_errors = 0;
+	int count_open_attempts = 0;
 
 	/* report descriptor */
 	unsigned char	rdbuf[MAX_REPORT_SIZE];
@@ -309,6 +310,7 @@ static int nut_libusb_open(libusb_device_handle **udevp,
 		/* int		if_claimed = 0; */
 		libusb_device	*device = devlist[devnum];
 
+		count_open_attempts++;
 		libusb_get_device_descriptor(device, &dev_desc);
 		upsdebugx(2, "Checking device %" PRIuSIZE " of %" PRIuSIZE " (%04X/%04X)",
 			devnum + 1, devcount,
@@ -813,15 +815,16 @@ static int nut_libusb_open(libusb_device_handle **udevp,
 			nut_libusb_subdriver_defaults(&usb_subdriver);
 	}
 
+	/* If we got here, we did not return a successfully chosen device above */
 	*udevp = NULL;
 	libusb_free_device_list(devlist, 1);
 	upsdebugx(2, "libusb1: No appropriate HID device found");
 	fflush(stdout);
 
-	if (devcount < 1) {
+	if (devcount < 1 || count_open_attempts == 0) {
 		upslogx(LOG_WARNING,
 			"libusb1: Could not open any HID devices: "
-			"no USB buses found");
+			"no USB buses (or devices) found");
 	}
 	else
 	if (count_open_errors > 0
@@ -830,6 +833,13 @@ static int nut_libusb_open(libusb_device_handle **udevp,
 		upslogx(LOG_WARNING,
 			"libusb1: Could not open any HID devices: "
 			"insufficient permissions on everything");
+		if (count_open_attempts > count_open_errors) {
+			upslogx(LOG_WARNING,
+				"libusb1: except %d devices "
+				"tried but not matching the "
+				"requested criteria",
+				count_open_attempts - count_open_errors);
+		}
 	}
 
 	return -1;
