@@ -210,6 +210,10 @@ https://github.com/networkupstools/nut/milestone/11
    or service unit methods or init script), to enable troubleshooting of LibUSB
    itself. [issue #2616]
 
+ - USB drivers should now not log "insufficient permissions on everything" alone
+   when some devices were accessible but just did not match -- clarify that case
+   in the next line, when applicable. [PR #2699]
+
  - Introduced a new driver concept for interaction with OS-reported hardware
    monitoring readings. Currently instantiated as `hwmon_ina219` specifically
    made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"
